--- a/package.json
+++ b/package.json
@@ -7,15 +7,21 @@
   ],
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
+  },
+  "engines": {
+    "node": "16.13.2",
+    "npm": "8.1.2"
   },
   "dependencies": {
     "@angular/animations": "9.1.11",
     "@angular/cdk": "9.2.4",
+    "@angular/cli": "9.1.9",
     "@angular/common": "9.1.11",
     "@angular/compiler": "9.1.11",
     "@angular/core": "9.1.11",
@@ -27,11 +33,15 @@
     "@angular/platform-browser-dynamic": "9.1.11",
     "@angular/router": "9.1.11",
     "components-font-awesome": "5.9.0",
+    "express": "^4.17.2",
     "firebase": "7.15.3",
     "jquery": "3.5.1",
+    "karma": "~4.1.0",
+    "path": "^0.12.7",
     "rxjs": "^6.5.4",
     "toastr": "2.1.4",
     "tslib": "^1.10.0",
+    "typescript": "~3.8.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
