--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.2.0",
   "description": "Angular Heroes",
   "authors": [
-    "Psblo Roberto"
+    "Pablo Roberto"
   ],
   "scripts": {
     "ng": "ng",
@@ -11,7 +11,8 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "npm install"
   },
   "engines": {
     "node": "16.13.2",
