Teste de deploy

--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "scripts": {
     "ng": "ng",
     "start": "npm start",
-    "build": "ng build --prod",
+    "build": "npm install",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "heroku-postbuild": "npm install"
+    "heroku-postbuild": "npm start"
   },
   "engines": {
     "node": "16.13.2",
