--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   ],
   "scripts": {
     "ng": "ng",
-    "start": "npm start",
-    "build": "npm install",
+    "start": "node server.js",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "heroku-postbuild": "npm start"
+    "heroku-postbuild": "ng build --prod"
   },
   "engines": {
     "node": "16.13.2",
